--- a/MyApplication6/app/src/main/AndroidManifest.xml
+++ b/MyApplication6/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="@string/title_activity_sign_up"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Prakingground"
+            android:name=".ParkingGround"
             android:label="@string/title_activity_prakingground"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
