Improve Current User managment , change in json contract

--- a/MyApplication6/app/src/main/AndroidManifest.xml
+++ b/MyApplication6/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:label="@string/title_activity_prakingground"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Parkingslots"
+            android:name=".ParkingSlots"
             android:label="@string/title_activity_parkingslots"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
